fix: correct gap between links in credits

--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ input::placeholder {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 1rem;
+  gap: 0.5rem;
 
   font-size: 1rem;
 }
